terraform_code/V1-EC2.tf
provider "aws" {
  region = "us-east-1"
  access_key = "var.access_key"
  secret_key = "var.secret_key"
}

resource "aws_instance" "web" {
    ami = "ami-0005e0cfe09cc9050"
    instance_type = "t2.micro"
    key_name = "devops_project"
}
